[Docs] Fix horizontal scroll

--- a/docs/src/docs.scss
+++ b/docs/src/docs.scss
@@ -74,6 +74,7 @@ $nav-bg: #f4f4f4;
 
 .fldocs-main {
   padding: 1rem 1rem 1rem 21rem;
+  width: 98vw;
 }
 
 .fldocs-section {
